# fonts

./: .gitignore  CMakeLists.txt
include/fontmaker/: types.hpp
makeotf_debug/: CMakeLists.txt  sep.c
src/: CMakeLists.txt  backend.cpp  backend.hpp  controller.cpp  controller.hpp  formmodel.cpp  formmodel.hpp  jamomodel.cpp  jamomodel.hpp  jamonames.hpp  jamoview.cpp  jamoview.hpp  jamoviewrenderer.cpp  jamoviewrenderer.hpp  main.cpp  menuhandler.cpp  menuhandler.hpp  resources.qrc
src/fontutils/: CMakeLists.txt  buffer.cpp  buffer.hpp  cffutils.cpp  cffutils.hpp  csparser.cpp  csparser.hpp  endian.cpp  endian.hpp  glyph.cpp  glyph.hpp  otfparser.cpp  otfparser.hpp  otfwriter.cpp  otfwriter.hpp  parser.cpp  parser.hpp  stdstr.cpp  stdstr.hpp  subroutines.cpp  subroutines.hpp  types.hpp
src/fontutils/tables/: basetable.cpp  basetable.hpp  buffer.cpp  buffer.hpp  cfftable.cpp  cfftable.hpp  cffutils.cpp  cffutils.hpp  cmapformat12.cpp  cmapformat12.hpp  cmapformat14.cpp  cmapformat14.hpp  cmapformat4.cpp  cmapformat4.hpp  cmapsubtable.cpp  cmapsubtable.hpp  cmaptable.cpp  cmaptable.hpp  font.cpp  font.hpp  generictable.cpp  generictable.hpp  headtable.cpp  headtable.hpp  hheatable.cpp  hheatable.hpp  hmtxtable.cpp  hmtxtable.hpp  maxptable.cpp  maxptable.hpp  nametable.cpp  nametable.hpp  offsettable.cpp  offsettable.hpp  os2table.cpp  os2table.hpp  otftable.cpp  otftable.hpp  posttable.cpp  posttable.hpp  (+7 more)
src/makeotf/: CMakeLists.txt  main.c
src/makeotf/source/cffread/: cffread.c
src/makeotf/source/hotconv/: cmap.c  feat.c  featerr.c  featgram.c  featscan.c
src/makeotf/source/typecomp/: parse.c  tc.c
src/qml/: JamoDelegate.qml  jamoview.qml  main.qml
test/: CMakeLists.txt  fuzzer.cpp  main.cpp
